22022022/iis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iis
  labels:
    app: iis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iis
  template:
    metadata:
      labels:
        app: iis
    spec:
      volumes:
      - name: logs
        persistentVolumeClaim:
          claimName: pvc-smb-02
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: iis-server
        image: mcr.microsoft.com/windows/servercore/iis
        ports:
        - containerPort: 80
        volumeMounts:
        - name: logs
          mountPath: c:\inetpub\test
