22022022/gke-int-ing.yaml
# openssl genrsa -out private.key 2048
# openssl req -newkey rsa:2048  -x509 -sha256  -days 3650 -nodes -out certificat.crt -keyout private.key
# openssl x509 -noout -text -in certificate.crt
# kubectl create secret tls selfsigned-tls --key=private.key --cert=certificat.crt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
  labels:
    app: hello-v1
spec:
  selector:
    matchLabels:
      app: hello-v1
  template:
    metadata:
      labels:
        app: hello-v1
    spec:
      containers:
      - name: frontend
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: hello-v1
  name: hello-v1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-v1
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.regional-static-ip-name: clo-uat-ilb-01
    kubernetes.io/ingress.class: "gce-internal"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - dev.xyz.com
    secretName: selfsigned-tls
  rules:
  - host: dev.xyz.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: hello-v1
              port:
                number: 80
